@@ -1,28 +1,47 @@
 package com.somemore.domains.interestcenter.handler;
 
+import com.somemore.center.domain.NEWCenter;
+import com.somemore.center.repository.NEWCenterRepository;
 import com.somemore.domains.interestcenter.event.domain.InterestCenterCreateRecruitBoardEvent;
 import com.somemore.domains.interestcenter.event.handler.CreateRecruitBoardHandlerImpl;
 import com.somemore.domains.interestcenter.usecase.InterestCenterQueryUseCase;
 import com.somemore.domains.recruitboard.event.CreateRecruitBoardEvent;
+import com.somemore.global.auth.oauth.domain.OAuthProvider;
 import com.somemore.global.common.event.ServerEventPublisher;
 import com.somemore.support.IntegrationTestSupport;
+import com.somemore.user.domain.User;
+import com.somemore.user.domain.UserRole;
+import com.somemore.user.dto.UserAuthInfo;
+import com.somemore.user.repository.user.UserRepository;
+import com.somemore.volunteer.domain.NEWVolunteer;
+import com.somemore.volunteer.repository.NEWVolunteerRepository;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.UUID;
+import java.util.Collections;
 
 import static org.mockito.ArgumentMatchers.argThat;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @Transactional
 class CreateRecruitBoardHandlerImplTest extends IntegrationTestSupport {
 
     @Autowired
     private CreateRecruitBoardHandlerImpl createRecruitBoardHandler;
+
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private NEWVolunteerRepository volunteerRepository;
+
+    @Autowired
+    private NEWCenterRepository centerRepository;
 
     @MockBean
     private InterestCenterQueryUseCase interestCenterQueryUseCase;
@@ -33,17 +52,26 @@ class CreateRecruitBoardHandlerImplTest extends IntegrationTestSupport {
     @Test
     void handle_ShouldPublishEventsForVolunteers() {
         // given
-        UUID centerId = UUID.randomUUID();
-        UUID volunteerId1 = UUID.randomUUID();
-        UUID volunteerId2 = UUID.randomUUID();
-        UUID volunteerId3 = UUID.randomUUID();
+        UserAuthInfo volunteerUserAuthInfo = UserAuthInfo.createForOAuth(OAuthProvider.NAVER);
+        User volunteerUser = User.of(volunteerUserAuthInfo, UserRole.VOLUNTEER);
+        userRepository.save(volunteerUser);
+
+        UserAuthInfo centerUserAuthInfo = UserAuthInfo.createForOAuth(OAuthProvider.NAVER);
+        User centerUser = User.of(centerUserAuthInfo, UserRole.CENTER);
+        userRepository.save(centerUser);
+
+        NEWVolunteer volunteer = NEWVolunteer.createDefault(volunteerUser.getId());
+        volunteerRepository.save(volunteer);
+
+        NEWCenter center = NEWCenter.createDefault(centerUser.getId());
+        centerRepository.save(center);
+
         Long recruitBoardId = 123L;
 
-        List<UUID> volunteerIds = List.of(volunteerId1, volunteerId2, volunteerId3);
-        when(interestCenterQueryUseCase.getVolunteerIdsByCenterId(centerId)).thenReturn(volunteerIds);
+        when(interestCenterQueryUseCase.getVolunteerIdsByCenterId(center.getId())).thenReturn(Collections.singletonList(volunteer.getId()));
 
         CreateRecruitBoardEvent createRecruitBoardEvent = CreateRecruitBoardEvent.builder()
-                .centerId(centerId)
+                .centerId(center.getId())
                 .recruitBoardId(recruitBoardId)
                 .build();
 
@@ -51,15 +79,13 @@ class CreateRecruitBoardHandlerImplTest extends IntegrationTestSupport {
         createRecruitBoardHandler.handle(createRecruitBoardEvent);
 
         // then
-        verify(serverEventPublisher, times(volunteerIds.size())).publish(Mockito.any(InterestCenterCreateRecruitBoardEvent.class));
+        verify(serverEventPublisher, times(1)).publish(Mockito.any(InterestCenterCreateRecruitBoardEvent.class));
 
-        for (UUID volunteerId : volunteerIds) {
-            verify(serverEventPublisher).publish(argThat(event ->
-                    event instanceof InterestCenterCreateRecruitBoardEvent &&
-                            ((InterestCenterCreateRecruitBoardEvent) event).getCenterId().equals(centerId) &&
-                            ((InterestCenterCreateRecruitBoardEvent) event).getVolunteerId().equals(volunteerId) &&
-                            ((InterestCenterCreateRecruitBoardEvent) event).getRecruitBoardId().equals(recruitBoardId)
-            ));
-        }
+        verify(serverEventPublisher).publish(argThat(event ->
+                event instanceof InterestCenterCreateRecruitBoardEvent &&
+                        ((InterestCenterCreateRecruitBoardEvent) event).getRecruitBoardId().equals(recruitBoardId) &&
+                        ((InterestCenterCreateRecruitBoardEvent) event).getVolunteerId().equals(volunteer.getId())
+        ));
+
     }
 }
